[project]
name = "server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "crewai>=0.175.0",
    "crewai-tools>=0.65.0",
    "googlesearch-python>=1.3.0",
    "langchain-community>=0.3.29",
    "langchain-groq>=0.3.7",
    "langchain-huggingface>=0.3.1",
    "sentence-transformers>=5.1.0",
]
